--- a/packages/SystemUI/res/values/ar_strings.xml
+++ b/packages/SystemUI/res/values/ar_strings.xml
@@ -4,4 +4,7 @@
     <!-- Title shown in recents popup for adding an application to the split view -->
     <string name="status_bar_recent_add_to_split_view">Add to Split View</string>
 
+    <!-- Power menu -->
+    <string name="quick_settings_powermenu_label">Power Menu</string> 
+
 </resources>
