--- a/core/res/res/values/ar_symbols.xml
+++ b/core/res/res/values/ar_symbols.xml
@@ -17,7 +17,10 @@
 -->
 <resources>
 
+  <!-- Power menu -->
+  <java-symbol type="string" name="global_action_screen_record" />
+  <java-symbol type="drawable" name="ic_lock_screen_record" />
+
   <!-- UI theme mode -->
   <java-symbol type="integer" name="config_uiThemeMode" />
-
 </resources>
