--- a/packages/SystemUI/res/values/ar_strings.xml
+++ b/packages/SystemUI/res/values/ar_strings.xml
@@ -7,4 +7,10 @@
     <!-- Power menu -->
     <string name="quick_settings_powermenu_label">Power Menu</string> 
 
+    <!-- QS Quick record -->
+    <string name="quick_settings_quick_record_nofile">Long-press</string>
+    <string name="quick_settings_quick_record_def">Quick Record</string>
+    <string name="quick_settings_quick_record_rec">Recording...</string>
+    <string name="quick_settings_quick_record_save">Saved</string>
+    <string name="quick_settings_quick_record_play">Playing...</string>
 </resources>
